# tfs

./: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  settings.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/: migrate_db.py
api/cruds/: file.py
api/models/: file.py
api/routers/: file.py
api/schemas/: file.py
app/: Dockerfile  db.py  main.py  migrate_db.py  pyproject.toml  settings.py
app/cruds/: file.py
app/models/: file.py
app/routers/: file.py
app/schemas/: file.py
app/tests/: test_main.py
nginx/: default.conf
nginx/html/files/: file_info.html
nginx/html/root/: index.html
nginx/html/root/static/: file_info.js  main.js
static/: common.js  file_info.js  main.js
templates/: file_info.html  layout.html  main.html  message.html  remove_modal.html  toast.html
tests/: test_main.py
web/routers/: web.py
