[tool.poetry]
name = "tfs"
version = "0.1.0"
description = "Temporary File Storage"
authors = ["saasan"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiomysql = "^0.0.21"
SQLAlchemy = "^1.4.23"
ulid-py = "^1.1.0"
Jinja2 = "^3.0.1"
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"
certifi = "^2021.5.30"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.15.1"
aiosqlite = "^0.17.0"
httpx = "^0.19.0"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
