[tool.poetry]
name = "tfs"
version = "0.1.0"
description = "Temporary File Storage"
authors = ["saasan"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aiomysql = "^0.1.0"
sqlalchemy = "^1.4.36"
ulid-py = "^1.1.0"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.18.3"
aiosqlite = "^0.17.0"
httpx = "^0.22.0"
freezegun = "^1.2.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
